fixed a FindBugs issue